--- a/src/app/components/home/home.style.scss
+++ b/src/app/components/home/home.style.scss
@@ -98,7 +98,7 @@ body {
   background-color: darken($color-primary, 10);
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 2em 0 8em;
+  padding: 2em 0 9em;
   position: relative;
 
   @include media($small-screen) {
